--- a/src/Colour/styles/style.css
+++ b/src/Colour/styles/style.css
@@ -3,7 +3,7 @@
   min-height: 100vh;
 }
 .colourGenerate .container {
-  padding: 4rem 2rem;
+  padding: 10rem 2rem 0rem 2rem;
   max-width: 1400px;
   margin: 0 auto;
 }
