--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -15,4 +15,5 @@
 @import "./contact";
 @import "./contactform";
 @import "./notfound";
+@import "./loading";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Poppins&family=Roboto+Condensed&family=The+Nautigal:wght@700&display=swap");
