--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -444,4 +444,84 @@
 }
 .notfound img {
   width: 45rem;
+}
+
+.loading {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100vh;
+  background-color: #fff;
+  font-family: consolas;
+  z-index: 53;
+  width: 100%;
+  position: fixed;
+}
+.loading .wavy {
+  position: relative;
+  -webkit-box-reflect: below 0rem linear-gradient(transparent, rgba(0, 0, 0, 0.2));
+}
+.loading .wavy span {
+  position: relative;
+  display: inline-block;
+  color: #000;
+  top: 0rem;
+  font-size: 5em;
+  text-transform: uppercase;
+  -webkit-animation: loading 1s ease-in-out infinite;
+          animation: loading 1s ease-in-out infinite;
+  -webkit-animation-delay: calc(0.1s * var(--i));
+          animation-delay: calc(0.1s * var(--i));
+}
+@-webkit-keyframes loading {
+  0% {
+    transform: translateY(0px);
+  }
+  20% {
+    transform: translateY(-20px);
+  }
+  40% {
+    transform: translateY(0px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+@keyframes loading {
+  0% {
+    transform: translateY(0px);
+  }
+  20% {
+    transform: translateY(-20px);
+  }
+  40% {
+    transform: translateY(0px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+.loading .loading-img {
+  position: relative;
+  top: 6rem;
+}
+.loading .loading-img img {
+  width: 50rem;
+}
+
+@media (max-width: 500px) {
+  .loading {
+    width: 100%;
+  }
+  .loading .wavy span {
+    font-size: 3em;
+    top: 0rem;
+  }
+  .loading .loading-img {
+    top: 5rem;
+  }
+  .loading .loading-img img {
+    width: 100%;
+  }
 }/*# sourceMappingURL=style.css.map */
