--- a/src/CV/styles/_skills.scss
+++ b/src/CV/styles/_skills.scss
@@ -1,7 +1,7 @@
 .skills_container {
   width: 100%;
   min-height: 100vh;
-  background-color: rgb(11, 43, 73);
+  background-color: #292929;
   padding-top: 5rem;
 
   .skills_title {
