--- a/src/Todo/styles/todo.css
+++ b/src/Todo/styles/todo.css
@@ -1,13 +1,23 @@
 .todo .container {
-  background-color: #f0c597;
+  background-color: #FFF;
   width: 100%;
   min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+}
+.todo .container .header h1 {
+  color: #292929;
+  text-align: center;
+  margin: 20px 0;
+  padding: 5px 0px;
+  font-size: 60px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .todo .container .app-wrapper {
-  background-color: #1a4b55;
+  background-color: #292929;
+  width: 800px;
   min-width: 450px;
   min-height: 650px;
   max-height: 650px;
@@ -15,11 +25,6 @@
   border-radius: 10px;
   box-shadow: 3px 6px 35px #000;
   overflow-y: scroll;
-}
-.todo .container .app-wrapper .header h1 {
-  color: #fff;
-  text-align: center;
-  margin: 30px 0;
 }
 .todo .container .app-wrapper .task-input {
   outline: none;
@@ -54,9 +59,9 @@
 }
 .todo .container .app-wrapper .todolist .list-item .list {
   width: 220px;
-  background-color: #1a4b55;
+  background-color: rgb(114, 114, 114);
   border: none;
-  color: #ccc;
+  color: #FFF;
   font-size: 20px;
   padding-left: 10px;
   margin-right: 15px;
@@ -107,4 +112,21 @@
 input:focus,
 button:focus {
   outline: none;
+}
+
+@media (max-width: 500px) {
+  .todo .container .header h1 {
+    font-size: 40px;
+  }
+  .todo .container .app-wrapper {
+    background-color: #292929;
+    max-width: 350px;
+    min-width: 350px;
+  }
+  .todo .container .app-wrapper .task-input {
+    width: 190px;
+  }
+  .todo .container .app-wrapper .todolist .list-item .list {
+    width: 120px;
+  }
 }/*# sourceMappingURL=todo.css.map */
