--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -1,23 +1,24 @@
 .contact_container {
-  background-color: #ffe5b6;
+  background-color: #292929;
   width: 100%;
   height: auto;
   display: block;
   padding-bottom: 3rem;
+  color: #fff;
 
-  h1.contact_ctitle {
+  h1.contact_title {
     text-align: center;
     padding-top: 1.5rem;
     padding-bottom: 1rem;
   }
 
-  h1.contact_ctitle:after {
+  h1.contact_title:after {
     content: "";
     display: block;
     width: 50px;
     height: 3px;
     margin: 5px auto 40px;
-    background-color: #383838;
+    background-color: #bdb3b3;
   }
 
   .grid-container {
