--- a/src/styles/_contactform.scss
+++ b/src/styles/_contactform.scss
@@ -15,7 +15,8 @@
         padding: 0rem 1.5rem 1.5rem 1.5rem;
 
         input {
-          background-color: #fff;
+          background-color: #fff7e7;
+          color: #000;
           border: 1px solid;
         }
       }
@@ -31,23 +32,25 @@
 
     textarea {
       resize: none;
+      background-color: #fff7e7;
     }
 
     .form_button {
       font-size: 2rem;
-      background-color: #bb5a3a;
+      background-color: #fff7e7;
       border: 0;
       height: 125px;
       width: 125px;
       border-radius: 50%;
       margin-top: 3.5rem;
-      color: #fdf2f0;
+      color: rgb(11, 43, 73);
       cursor: pointer;
     }
 
     button:hover {
-      background-color: #bb5a3abb;
+      background-color: #6e6d6d;
       transition: all 0.3s ease;
+      color: #fcfdf2;
     }
   }
 }
