--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -4,6 +4,6 @@
   justify-content: center;
   align-items: center;
   font-size: 1rem;
-  background-color: #bb5a3a;
-  color: antiquewhite;
+  background-color: #000;
+  color: #fff7e7;
 }
