--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -2,7 +2,7 @@
 .Navbar {
   .menu {
     display: flex;
-    background-color: #000;
+    background-color: #292929;
     position: fixed;
     z-index: 51;
     align-items: center;
@@ -73,7 +73,7 @@
         &:hover,
         &:active {
           .text {
-            background-color: rgb(214, 98, 3);
+            background-color: #292929;
             color: #ffffff;
             border-radius: 10px;
           }
@@ -84,12 +84,12 @@
             }
 
             .nav_list {
-              background-color: #000;
+              background-color: #292929;
               border-radius: 0 0 10px 10px;
 
               li {
                 display: block;
-                border-bottom: 1px rgb(214, 98, 3) solid;
+                border-bottom: 1px #bdb3b3 solid;
                 text-align: right;
                 padding-bottom: 5px;
 
@@ -131,7 +131,7 @@
       .burger-bar {
         width: 2.5em;
         height: 0.4em;
-        background-color: rgb(214, 98, 3);
+        background-color: #bdb3b3;
         border-radius: 0.1em;
       }
 
@@ -172,7 +172,7 @@
   .visible {
     width: 100%;
     height: 10vh;
-    border-bottom: 1px solid #ffffff;
+    border-bottom: 1px solid #bdb3b3;
 
     .logo {
       display: inline;
@@ -211,7 +211,7 @@
 
         .list {
           margin-bottom: 0.5rem;
-          border-bottom: 1px solid #fff;
+          border-bottom: 1px solid #bdb3b3;
         }
       }
     }
