--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -5,8 +5,8 @@
   justify-content: center;
   align-items: center;
   font-size: 1rem;
-  background-color: #bb5a3a;
-  color: antiquewhite;
+  background-color: #000;
+  color: #fff7e7;
 }
 
 /* ---------------- Navbar and burger menu ------------------ */
@@ -15,7 +15,7 @@
 }
 .Navbar .menu {
   display: flex;
-  background-color: #000;
+  background-color: #292929;
   position: fixed;
   z-index: 51;
   align-items: center;
@@ -75,7 +75,7 @@
   color: #ffffff;
 }
 .Navbar .menu .nav_grid .list:hover .text, .Navbar .menu .nav_grid .list:active .text {
-  background-color: rgb(214, 98, 3);
+  background-color: #292929;
   color: #ffffff;
   border-radius: 10px;
 }
@@ -83,12 +83,12 @@
   border-radius: 10px 10px 0 0;
 }
 .Navbar .menu .nav_grid .list:hover .nav_project .nav_list, .Navbar .menu .nav_grid .list:active .nav_project .nav_list {
-  background-color: #000;
+  background-color: #292929;
   border-radius: 0 0 10px 10px;
 }
 .Navbar .menu .nav_grid .list:hover .nav_project .nav_list li, .Navbar .menu .nav_grid .list:active .nav_project .nav_list li {
   display: block;
-  border-bottom: 1px rgb(214, 98, 3) solid;
+  border-bottom: 1px #bdb3b3 solid;
   text-align: right;
   padding-bottom: 5px;
 }
@@ -123,7 +123,7 @@
 .Navbar nav .burger-menu .burger-bar {
   width: 2.5em;
   height: 0.4em;
-  background-color: rgb(214, 98, 3);
+  background-color: #bdb3b3;
   border-radius: 0.1em;
 }
 .Navbar nav .burger-menu .burger-bar.clicked:nth-child(1) {
@@ -152,7 +152,7 @@
 .Navbar .visible {
   width: 100%;
   height: 10vh;
-  border-bottom: 1px solid #ffffff;
+  border-bottom: 1px solid #bdb3b3;
 }
 .Navbar .visible .logo {
   display: inline;
@@ -183,7 +183,7 @@
   }
   .Navbar .menu .nav_grid .list {
     margin-bottom: 0.5rem;
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid #bdb3b3;
   }
   .Navbar .visible {
     height: 40vh;
@@ -225,24 +225,25 @@
   }
 }
 .contact_container {
-  background-color: #ffe5b6;
+  background-color: #292929;
   width: 100%;
   height: auto;
   display: block;
   padding-bottom: 3rem;
+  color: #fff;
 }
-.contact_container h1.contact_ctitle {
+.contact_container h1.contact_title {
   text-align: center;
   padding-top: 1.5rem;
   padding-bottom: 1rem;
 }
-.contact_container h1.contact_ctitle:after {
+.contact_container h1.contact_title:after {
   content: "";
   display: block;
   width: 50px;
   height: 3px;
   margin: 5px auto 40px;
-  background-color: #383838;
+  background-color: #bdb3b3;
 }
 .contact_container .grid-container {
   display: grid;
@@ -354,7 +355,8 @@
   padding: 0rem 1.5rem 1.5rem 1.5rem;
 }
 .form_container .contactform .col .text_group input {
-  background-color: #fff;
+  background-color: #fff7e7;
+  color: #000;
   border: 1px solid;
 }
 .form_container .contactform .col label {
@@ -365,21 +367,23 @@
 }
 .form_container .contactform textarea {
   resize: none;
+  background-color: #fff7e7;
 }
 .form_container .contactform .form_button {
   font-size: 2rem;
-  background-color: #bb5a3a;
+  background-color: #fff7e7;
   border: 0;
   height: 125px;
   width: 125px;
   border-radius: 50%;
   margin-top: 3.5rem;
-  color: #fdf2f0;
+  color: rgb(11, 43, 73);
   cursor: pointer;
 }
 .form_container .contactform button:hover {
-  background-color: rgba(187, 90, 58, 0.7333333333);
+  background-color: #6e6d6d;
   transition: all 0.3s ease;
+  color: #fcfdf2;
 }
 
 @media (max-width: 820px) {
